feat(dashboard): gh #662 Upgraded slurm to version 21-08-6-1

--- a/dashboard/dashboard.conf
+++ b/dashboard/dashboard.conf
@@ -6,6 +6,7 @@ location ~ ^/pun/dev/dashboard(/.*|$) {
   passenger_enabled on;
 
   passenger_app_env development;
+  passenger_min_instances 1;
 
   # Give apps the ability to download files from filesystem
   passenger_env_var HTTP_X_SENDFILE_TYPE X-Accel-Redirect;
