--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -95,14 +95,12 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           path: ./target
-      - name: Inject slug/short variables
-        uses: rlespinasse/github-slug-action@v3.x
       - name: Run release
         run: |
-          if [ "${{ env.GITHUB_REF_SLUG }}" = "canary" ]; then
-            npm run release -- --config='.release-it-dev.json' --git.tagMatch='[0-9][0-9][0-9][0-9].[0-9]*.[0-9]*-dev.1' --ci
-          else
+          if [ ${{ github.event.workflow_run.head_branch }} = "stable" ]; then
             npm run release -- --git.tagMatch='[0-9][0-9][0-9][0-9].[0-9]*.[0-9]*[!dev.1]' --ci
+          else
+            npm run release -- --config='.release-it-dev.json' --git.tagMatch='[0-9][0-9][0-9][0-9].[0-9]*.[0-9]*-dev.1' --ci
           fi
         env:
           HUSKY: 0
