--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -2,6 +2,11 @@ name: automated-tests
 
 on:
   workflow_dispatch:
+  workflow_run:
+    workflows: [ "build-and-test" ]
+    branches: [ canary, stable ]
+    types:
+      - complete
 
 jobs:
   test-all:
