--- a/automated-testing/Makefile
+++ b/automated-testing/Makefile
@@ -6,7 +6,8 @@ DOCKER_NODE_IMAGE := node:16
 DOCKER_CYPRESS_IMAGE := cypress/base:16.4.0
 WORKING_DIR := $(shell pwd)
 
-local remotedev staging-cannon prod-fasse prod-cannon:
+local remote-dev staging-cannon prod-cannon:
+	@echo "For Cannon environments, you need to be connected to the VPN"
 	cp -rf cypress.env.json.$(@) cypress.env.json
 	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*"
 
@@ -22,6 +23,7 @@ landing:
 	cp -rf cypress.env.json.$(@) cypress.env.json
 	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*"
 
-fasse:
-	cp -rf cypress.env.json.prod-$(@) cypress.env.json
-	npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*
+staging-fasse prod-fasse:
+	@echo "You need to be connected to the FASSE VPN"
+	cp -rf cypress.env.json.$(@) cypress.env.json
+	env https_proxy=http://rcproxy.rc.fas.harvard.edu:3128 npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*
