--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@commitlint/config-conventional": "^13.1.0",
     "@csmith/release-it-calver-plugin": "^2021.5.7",
     "@release-it/bumper": "^3.0.1",
-    "@release-it/conventional-changelog": "^4.2.2",
+    "@release-it/conventional-changelog": "4.1.0",
     "current-git-branch": "^1.1.0",
     "husky": "^7.0.1",
     "release-it": "^14.14.0"
