--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -100,12 +100,15 @@ jobs:
           if [ "${{ github.event.workflow_run.head_branch }}" = "stable" ]; then
             PREVIOUS_TAG="$(git tag --list --merged |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+$' |tail -n 1)"
             CONFIG_ARG="--config='.release-it.json'"
+            # we have to pass skipUnstable on stable builds because dev build tags do not follow the same versioning as stable build tags and this causes commit messages to be formatted out of order
+            SKIP_UNSTABLE_ARG="--'plugins.@release-it/conventional-changelog.skipUnstable'='true'"
           else
             PREVIOUS_TAG="$(git tag --list --merged |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+-dev\.1$' |tail -n 1)"
             CONFIG_ARG="--config='.release-it-dev.json'"
+            SKIP_UNSTABLE_ARG=''
           fi
-          # we have to pass plugins.@release-it/conventional-changelog.gitRawCommitOpts because https://github.com/release-it/conventional-changelog/pull/47
-          npm run release -- ${CONFIG_ARG} --git.tagMatch="${PREVIOUS_TAG}" --github.tagMatch="${PREVIOUS_TAG}" --'plugins.@release-it/conventional-changelog.gitRawCommitsOpts.from'="${PREVIOUS_TAG}" --ci
+          # we have to pass plugins.@release-it/conventional-changelog.gitRawCommitOpts because tagMatch does not work the same in @release-it/conventional-changelog as in the default release-it changelog generator, per https://github.com/release-it/conventional-changelog/pull/47
+          npm run release -- ${CONFIG_ARG} --git.tagMatch="${PREVIOUS_TAG}" --github.tagMatch="${PREVIOUS_TAG}" --'plugins.@release-it/conventional-changelog.gitRawCommitsOpts.from'="${PREVIOUS_TAG}" ${SKIP_UNSTABLE_ARG} --ci
         env:
           HUSKY: 0
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
