--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,12 +98,12 @@ jobs:
       - name: Run release
         run: |
           if [ "${{ github.event.workflow_run.head_branch }}" = "stable" ]; then
-            PREVIOUS_TAG="$(git tag --list --merged |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+$' |tail -n 1)"
+            PREVIOUS_TAG="$(git tag --list --merged |sort -n -t. -k1 -k2 -k3 |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+$' |tail -n 1)"
             CONFIG_ARG="--config=.release-it.json"
             # we have to pass skipUnstable on stable builds because dev build tags do not follow the same versioning as stable build tags and this causes commit messages to be formatted out of order
             SKIP_UNSTABLE_ARG="--plugins.@release-it/conventional-changelog.skipUnstable=true"
           else
-            PREVIOUS_TAG="$(git tag --list --merged |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+-dev\.1$' |tail -n 1)"
+            PREVIOUS_TAG="$(git tag --list --merged |sort -n -t. -k1 -k2 -k3 |egrep '^[0-9]{4}\.[0-1]?[0-9]\.[0-9]+-dev\.1$' |tail -n 1)"
             CONFIG_ARG="--config=.release-it-dev.json"
             SKIP_UNSTABLE_ARG=''
           fi
