fix(build): gh #669 Fixed typo on automated tests GitHub action yaml

--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -6,7 +6,7 @@ on:
     workflows: [ "build-and-test" ]
     branches: [ canary, stable ]
     types:
-      - complete
+      - completed
 
 jobs:
   test-all:
