--- a/.github/workflows/automated-tests.yml
+++ b/.github/workflows/automated-tests.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   test-all:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout ${{ github.sha }}
         uses: actions/checkout@v2
