--- a/automated-testing/Makefile
+++ b/automated-testing/Makefile
@@ -1,6 +1,6 @@
 # default build target
 all:: local
-.PHONY: test local remotedev staging-cannon prod-fasse prod-cannon
+.PHONY: test local remotedev staging-cannon prod-fasse prod-cannon landing
 
 DOCKER_NODE_IMAGE := node:16
 DOCKER_CYPRESS_IMAGE := cypress/base:16.4.0
@@ -23,4 +23,4 @@ test:
 
 landing:
 	cp -rf cypress.env.json.$(@) cypress.env.json
-	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*"
+	$(ENV) npm install && $(ENV) ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*
