fix(testing): gh #706 Run Cypress tests using command line tool (#65)
* fix(testing): gh #706 Run Cypress tests using command line tool
* fix(testing): gh #706 Updated Sid static site tests to run outside Docker
* fix(testing): gh #706 Updated Header test to allow for multiple File links

--- a/automated-testing/Makefile
+++ b/automated-testing/Makefile
@@ -1,15 +1,17 @@
 # default build target
 all:: local
-.PHONY: test local remotedev staging-cannon prod-fasse prod-cannon
+.PHONY: test local remotedev staging-cannon prod-fasse prod-cannon landing
 
 DOCKER_NODE_IMAGE := node:16
 DOCKER_CYPRESS_IMAGE := cypress/base:16.4.0
 WORKING_DIR := $(shell pwd)
 
-local remote-dev staging-cannon prod-cannon:
-	@echo "For Cannon environments, you need to be connected to the VPN"
+staging-fasse prod-fasse:  ENV := env no_proxy=.harvard.edu http_proxy=http://rcproxy.rc.fas.harvard.edu:3128 https_proxy=http://rcproxy.rc.fas.harvard.edu:3128
+
+local remote-dev staging-fasse prod-fasse staging-cannon prod-cannon:
+	@echo "For FASSE and Cannon environments, you need to be connected to the VPN"
 	cp -rf cypress.env.json.$(@) cypress.env.json
-	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*"
+	$(ENV) npm install && $(ENV) ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*
 
 test:
 	cd ../dashboard/ && DETACHED=true make
@@ -21,9 +23,4 @@ test:
 
 landing:
 	cp -rf cypress.env.json.$(@) cypress.env.json
-	docker run --rm --network=host -v $(WORKING_DIR):/usr/local/app -v /usr/local/app/node_modules -w /usr/local/app --env cypress_dashboard_username=$$OOD_USERNAME --env cypress_dashboard_password=$$OOD_PASSWORD $(DOCKER_CYPRESS_IMAGE) /bin/bash -c "npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*"
-
-staging-fasse prod-fasse:
-	@echo "You need to be connected to the FASSE VPN"
-	cp -rf cypress.env.json.$(@) cypress.env.json
-	env https_proxy=http://rcproxy.rc.fas.harvard.edu:3128 npm install && ./node_modules/.bin/cypress run --headless --spec cypress/integration/fasrc-dashboard/*,cypress/integration/sid-dashboard/*
+	$(ENV) npm install && $(ENV) ./node_modules/.bin/cypress run --headless --spec cypress/integration/sid-landing-site/*
