feat(dashboard): gh #731 allow selecting between multiple support ticket queues

--- a/dashboard/application/test/fixtures/config/rt_config.yml
+++ b/dashboard/application/test/fixtures/config/rt_config.yml
@@ -5,5 +5,6 @@ auth_token: "file-auth-token"
 timeout: 1022
 verify_ssl: true
 priority: "99"
-queue_names:
+queues:
   - "General"
+  - "Alternate"
