Revert "feat(dashboard): gh #731 support specifying more than one queue in RT client config (#67)"
This reverts commit 13b67c2ee8c79d52dea88664a0087e71b3a65c9f.

--- a/dashboard/application/test/fixtures/config/rt_config.yml
+++ b/dashboard/application/test/fixtures/config/rt_config.yml
@@ -5,6 +5,4 @@ auth_token: "file-auth-token"
 timeout: 1022
 verify_ssl: true
 priority: "99"
-queues:
-  - "General"
-  - "Alternate"
+queue_name: "General"
