fix(dashboard): gh #651 Fixed turbovnc version and template for local environment

--- a/dashboard/Makefile
+++ b/dashboard/Makefile
@@ -23,18 +23,32 @@ ifneq ($(shell git branch --show-current),stable)
 NPM_RUN_VERSION_ARGS := --config='.release-it-dev.json'
 endif
 
+TEMPLATE_LOCATION := ./application/lib/ood_core/batch_connect/templates
+TURBOVNC_TEMPLATE := turbovnc.rb
+KVM_TEMPLATE      := kvm.rb
+
 remote-dev clean-remote-dev:     LOGIN_HOST   := login.rc.fas.harvard.edu
 remote-dev clean-remote-dev:     APP_FOLDER   := ./fasrc/dev/dashboard
+remote-dev:                      TEMPLATE_URL := https://iqss-sid.rc.fas.harvard.edu/pun/sys/dashboard/files/fs/var/www/ood/apps/sys/sid/lib/ood_core/batch_connect/templates
+remote-dev:                      CHECK_TEMPLATE_VERSION  := "check_version"
+
 remote-fasse clean-remote-fasse: LOGIN_HOST   := fasselogin.rc.fas.harvard.edu
 remote-fasse clean-remote-fasse: APP_FOLDER   := ./.fasseood/dev/dashboard
+remote-fasse:                    TEMPLATE_URL := https://fasse-iqss-ood.rc.fas.harvard.edu/pun/sys/dashboard/files/fs/var/www/ood/apps/sys/sid/lib/ood_core/batch_connect/templates
+remote-fasse:                    HTTP_PROXY   := http://rcproxy.rc.fas.harvard.edu:3128
+remote-fasse:                    HTTPS_PROXY  := http://rcproxy.rc.fas.harvard.edu:3128
+remote-fasse:                    CHECK_TEMPLATE_VERSION  := ""
 
 dev: version down up
 
 remote-dev remote-fasse: version
-	$(ENV) docker-compose build
-	echo "For FASSE, you need to be connected to the VPN"
+	$(ENV) http_proxy=$(HTTP_PROXY) https_proxy=$(HTTPS_PROXY) docker-compose build
+	@echo "You need to be connected to the VPN"
 	ssh $(REMOTE_USERNAME)@$(LOGIN_HOST) mkdir -p $(APP_FOLDER)
 	$(ENV) docker-compose run --no-deps --entrypoint="" ood su - ood bash -c "export PATH=/home/ood/bin:/home/ood/ondemand/dev/dashboard/node_modules/.bin:$$PATH; cd /home/ood/ondemand/dev/dashboard; scl enable rh-ruby27 rh-nodejs12 'gem install --user-install bundler -v 2.1.4 && bundle config --local path 'vendor/bundle' && bundle install && npm install yarn --save && bundle exec rake assets:precompile'"
+	@echo "You need to be connected to the VPN"
+	@./download_and_check.sh $(REMOTE_USERNAME) $(TEMPLATE_URL)/$(TURBOVNC_TEMPLATE) $(TEMPLATE_LOCATION)/$(TURBOVNC_TEMPLATE) $(CHECK_TEMPLATE_VERSION)
+	@./download_and_check.sh $(REMOTE_USERNAME) $(TEMPLATE_URL)/$(KVM_TEMPLATE) $(TEMPLATE_LOCATION)/$(KVM_TEMPLATE) $(CHECK_TEMPLATE_VERSION)
 	rsync -avz --delete --exclude-from='rsync-exclude.conf' ./application/ -e ssh $(REMOTE_USERNAME)@$(LOGIN_HOST):$(APP_FOLDER)
 
 test:
