fix(dashboard): gh #822 Fixed quick launcher configuration for all applications for the FASSE and CANNON environments

--- a/dashboard/application/config/launchers/cannon-jupyter.yml
+++ b/dashboard/application/config/launchers/cannon-jupyter.yml
@@ -4,19 +4,19 @@ cluster: "odyssey3"
 form:
   token: "sys/Jupyter"
   bc_queue: "test"
-  bc_account: ""
-  bc_num_slots: "1"
-  bc_num_hours: "1"
+  jupyterlab_switch: "1"
   custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
+  working_folder: ""
   envscript: ""
   modules: ""
-  jupyterlab_switch: "1"
+  custom_reservation: ""
+  extra_slurm: ""
+  bc_account: ""
   custom_email_address: ""
   bc_email_on_started: "0"
-  custom_reservation: ""
 
 view:
   color: "#2D9BF0"
