--- a/dashboard/application/config/launchers/cannon-stata.yml
+++ b/dashboard/application/config/launchers/cannon-stata.yml
@@ -3,20 +3,19 @@ order: 40
 cluster: "odyssey3"
 form:
   token: "sys/Stata"
-  bc_queue: "test"
-  bc_account: ""
+  desktop: "xfce"
+  bc_vnc_resolution: "1024x768"
   bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_queue: "test"
   custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
+  stata_version: "stata/17.0-fasrc01"
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  bc_vnc_resolution: "1024x768"
-  stata_version: "stata/16.0-fasrc01"
+  bc_account: ""
 
 view:
   color: "#2D9BF0"
