--- a/dashboard/application/config/launchers/cannon-matlab.yml
+++ b/dashboard/application/config/launchers/cannon-matlab.yml
@@ -3,19 +3,19 @@ order: 60
 cluster: "odyssey3"
 form:
   token: "sys/Matlab"
-  bc_queue: "test"
-  bc_account: ""
+  desktop: "xfce"
+  bc_vnc_resolution: "1024x768"
   bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_queue: "test"
   custom_memory_per_node: "8"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
+  matlab_version: "matlab/R2022a-fasrc01"
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  bc_vnc_resolution: "1024x768"
-  matlab_version: "matlab/R2021a-fasrc01"
+  bc_account: ""
 
 view:
   color: "#2D9BF0"
