--- a/dashboard/application/config/launchers/cannon-rdesktop.yml
+++ b/dashboard/application/config/launchers/cannon-rdesktop.yml
@@ -2,25 +2,23 @@
 order: 20
 cluster: "odyssey3"
 form:
-  token: "sys/NativeRD"
-  bc_queue: "test"
-  bc_account: ""
+  token: "sys/RemoteDesktop"
+  bc_vnc_idle: "0"
+  desktop: "myxfce"
+  bc_vnc_resolution: "1024x768"
   bc_num_slots: "1"
-  bc_num_hours: "1"
+  node_type: ""
+  bc_queue: "test"
   custom_memory_per_node: "4"
   custom_num_cores: "2"
   custom_num_gpus: "0"
+  bc_num_hours: ""
   custom_time: "08:00:00"
-  envscript: ""
+  custom_desktop: "1"
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  bc_vnc_resolution: "1024x768"
-  custom_desktop: "1"
-  matlab_version: "NULL"
-  rstudio_version: "rstudio/1.1.453-fasrc01"
-  r_version: "R/4.1.0-fasrc01"
-  rlibs: "~/apps/R_4.1.0_fasrc01"
+  bc_account: ""
 
 view:
   color: "#2D9BF0"
