--- a/dashboard/application/config/launchers/cannon-sas.yml
+++ b/dashboard/application/config/launchers/cannon-sas.yml
@@ -3,19 +3,18 @@ order: 50
 cluster: "odyssey3"
 form:
   token: "sys/SAS"
-  bc_queue: "test"
-  bc_account: ""
+  desktop: "xfce"
+  bc_vnc_resolution: "1024x768"
   bc_num_slots: "1"
-  bc_num_hours: "1"
+  bc_queue: "test"
   custom_memory_per_node: "4"
   custom_num_cores: "1"
   custom_num_gpus: "0"
   custom_time: "08:00:00"
-  envscript: ""
   custom_email_address: ""
   bc_email_on_started: "0"
   custom_reservation: ""
-  bc_vnc_resolution: "1024x768"
+  bc_account: ""
 
 view:
   color: "#2D9BF0"
