--- a/dashboard/dev-cluster.yml
+++ b/dashboard/dev-cluster.yml
@@ -20,14 +20,14 @@ v2:
       script_wrapper: |
         module purge
         export PATH="/opt/TurboVNC/bin:$PATH"
-        export WEBSOCKIFY_CMD="/usr/bin/websockify"
+        export WEBSOCKIFY_CMD="/bin/websockify"
         %s
       set_host: "host=$(hostname -A | awk '{print $1}')"
     turbovnc:
       script_wrapper: |
         module purge
         export PATH="/opt/TurboVNC/bin/:$PATH"
-        export WEBSOCKIFY_CMD="/usr/bin/websockify"
+        export WEBSOCKIFY_CMD="/bin/websockify"
         %s
       set_host: "host=$(hostname -A | awk '{print $1}')"
     kvm:
