--- a/ondemand/docker-compose.yml
+++ b/ondemand/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   rt:
     image: netsandbox/request-tracker:4.4
     hostname: rt
-    container_name: rt
+    container_name: ondemand_rt
     environment:
       RT_WEB_PORT: "34000"
     ports:
@@ -15,7 +15,7 @@ services:
   mysql:
     image: mariadb:10.4.18
     hostname: mysql
-    container_name: mysql
+    container_name: ondemand_mysql
     environment:
       MYSQL_RANDOM_ROOT_PASSWORD: "yes"
       MYSQL_DATABASE: slurm_acct_db
@@ -33,14 +33,14 @@ services:
         OOD_UID: ${OOD_UID}
         OOD_GID: ${OOD_GID}
     hostname: ood
-    container_name: ood
+    container_name: ondemand_ood
     volumes:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
       - slurm_jobdir:/data
       - var_log_slurm:/var/log/slurm
       - ./apps/Rstudio:/var/www/ood/apps/sys/Rstudio
-      - ./apps/OdysseyRD:/var/www/ood/apps/sys/OdysseyRD
+      - ./apps/NativeRD:/var/www/ood/apps/sys/NativeRD
       - ../VERSION:/var/www/ood/apps/sys/dashboard/VERSION
       - ./data:/home/ood/ondemand/data:rw
       - ./config:/etc/ood/config/apps/dashboard
@@ -72,7 +72,7 @@ services:
         OOD_UID: ${OOD_UID}
         OOD_GID: ${OOD_GID}
     command: ["slurmdbd"]
-    container_name: slurmdbd
+    container_name: ondemand_slurmdbd
     hostname: slurmdbd
     volumes:
       - etc_munge:/etc/munge
@@ -93,7 +93,7 @@ services:
         OOD_GID: ${OOD_GID}
     entrypoint: /usr/local/bin/with-ssh.sh
     command: ["slurmctld"]
-    container_name: slurmctld
+    container_name: ondemand_slurmctld
     hostname: slurmctld
     volumes:
       - etc_munge:/etc/munge
@@ -116,7 +116,7 @@ services:
     command: ["slurmd"]
     privileged: true
     hostname: c1
-    container_name: c1
+    container_name: ondemand_c1
     volumes:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
@@ -141,7 +141,7 @@ services:
     command: ["slurmd"]
     hostname: c2
     privileged: true
-    container_name: c2
+    container_name: ondemand_c2
     volumes:
       - etc_munge:/etc/munge
       - etc_slurm:/etc/slurm
