--- a/ondemand/ondemand.d/default.yml
+++ b/ondemand/ondemand.d/default.yml
@@ -2,6 +2,7 @@ host_based_profiles: false
 disable_dashboard_logo: false
 pinned_apps_group_by:
 show_all_apps_link: false
+cancel_session_enabled: true
 
 help_menu:
   - group: "Interface"
