feat(ondemand): gh #824 added automated tests for OnDemand2.1 with Sid and FASRC profiles

--- a/ondemand/apps/Rstudio/local/ql_rstudio_dev.yml
+++ b/ondemand/apps/Rstudio/local/ql_rstudio_dev.yml
@@ -1,6 +1,6 @@
 ---
 cluster: "dev-cluster"
-title: "RStudio Server"
+title: "Rstudio Server"
 tile:
   title: "Run Rstudio Server"
   icon: "/public/images/rstudio_logo.png"
