--- a/ondemand/docker/dev-cluster.yml
+++ b/ondemand/docker/dev-cluster.yml
@@ -7,6 +7,7 @@ v2:
   job:
     adapter: "slurm"
     bin: "/usr/bin"
+    bin_host: "slurmctld"
     conf: "/etc/slurm/slurm.conf"
 
 # This section is for interactive app
