--- a/ondemand/puppet/data/common.yaml
+++ b/ondemand/puppet/data/common.yaml
@@ -3,7 +3,7 @@
 #openondemand::manage_dependency_repos: false
 openondemand::repo_release: 'latest'
 #openondemand::ondemand_package_ensure: '2.0.31-1.el8'
-openondemand::ondemand_package_ensure: '3.0.0-0.rc1.el8'
+openondemand::ondemand_package_ensure: '3.0.0-1.el8'
 openondemand::ondemand_dex_package_ensure: 'absent'
 
 #openondemand::servername: 'localhost'
@@ -20,3 +20,66 @@ openondemand::auth_configs:
  - 'AuthDBMUserFile "/etc/httpd/.htpasswd.dbm"'
  - 'RequestHeader unset Authorization'
  - 'Require valid-user'
+
+
+openondemand::clusters:
+  dev-cluster:
+    cluster_title: 'Example Cluster'
+    login_host: slurmctld
+    job_adapter: slurm
+    job_host: slurmctld
+    job_bin: /usr/bin
+    job_submit_host: slurmctld
+    job_lib: /usr/lib64
+    job_conf: /etc/slurm/slurm.conf
+
+# This is to configure app overrides
+#openondemand::apps_config_repo: 'https://github.com/AdvancedResearchComputing/OnDemandApps.git'
+openondemand::apps_config_source: '/tmp/dashboard/files/application'
+
+openondemand::confs:
+  sid:
+    content_template: '/tmp/dashboard/files/ondemand.d/sid.yml'
+  fasrc:
+    content_template: '/tmp/dashboard/files/ondemand.d/fasrc.yml'
+  support_ticket:
+    content_template: '/tmp/dashboard/files/ondemand.d/support_ticket.yml'
+
+openondemand::install_apps:
+  GenericRD:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  JBrowse:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  Jupyter:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  Matlab:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  OmniSci:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  Postgres:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  RemoteDesktop:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  RStudioServer:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  SAS:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  Stata:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  TensorBoard:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+  Totalview-Desktop:
+    app_source: '/tmp/dashboard/files/apps'
+    manage_package: false
+
