feat(ondemand): aded SSL support for OnDemand through puppet

--- a/ondemand/puppet/Dockerfile.puppet
+++ b/ondemand/puppet/Dockerfile.puppet
@@ -25,6 +25,7 @@ RUN dnf update -y && \
         lua-posix \
         rsync \
         rclone \
+        sshpass \
         httpd
         
 RUN dnf clean all && rm -rf /var/cache/dnf/*
