--- a/ondemand/puppet/data/common.yaml
+++ b/ondemand/puppet/data/common.yaml
@@ -1,7 +1,8 @@
 #vi /etc/puppetlabs/code/environments/production/data/common.yaml
 #openondemand::repo_nightly: true
 #openondemand::manage_dependency_repos: false
-openondemand::repo_release: 'latest'
+#openondemand::repo_release: 'latest'
+openondemand::repo_release: '3.0'
 #openondemand::ondemand_package_ensure: '2.0.31-1.el8'
 openondemand::ondemand_package_ensure: '3.0.0-1.el8'
 openondemand::ondemand_dex_package_ensure: 'absent'
