feat(ondemand): gh #824 minor updates to create a demo for OOD 3.0.0

--- a/ondemand/ondemand.d/sid.yml
+++ b/ondemand/ondemand.d/sid.yml
@@ -12,7 +12,7 @@ profiles:
     custom_css_files: ["/css/sid.css"]
 
     pinned_apps_group_by:
-    pinned_apps: ["*/ql_*"]
+    pinned_apps: ["*/ql_*", sys/RstudioDev]
     
     nav_bar:
       - "files"
