--- a/ondemand/development/RstudioDev/form.yml
+++ b/ondemand/development/RstudioDev/form.yml
@@ -6,3 +6,10 @@ form:
   - bc_num_hours
   - bc_num_slots
   - bc_email_on_started
+
+attributes:
+  bc_queue: ""
+  bc_account: ""
+  bc_num_slots: "1"
+  bc_num_hours: "1"
+  bc_email_on_started: "0"
