--- a/ondemand/ondemand.d/fasrc.yml
+++ b/ondemand/ondemand.d/fasrc.yml
@@ -1,52 +1,35 @@
-host_based_profiles: false
-disable_dashboard_logo: false
-show_all_apps_link: false
+profiles:
+  fasrc:
+    navbar_type: dark
+    dashboard_header_img_logo: "/public/images/fasrc_logo.png"
+    brand_bg_color: " rgb(157,47,60)"
+    brand_link_active_bg_color: "rgb(59, 61, 63)"
+    disable_dashboard_welcome_message: true
 
-cancel_session_enabled: true
-navbar_type: dark
-dashboard_header_img_logo: "/public/images/fasrc_logo.png"
-brand_bg_color: " rgb(157,47,60)"
-brand_link_active_bg_color: "rgb(59, 61, 63)"
-disable_dashboard_welcome_message: true
+    pinned_apps_group_by: "category"
+    pinned_apps:
+      - sys/Jupyter/main
+      - sys/RstudioDev/main
+      - sys/Matlab/main
+      - sys/RemoteDesktop/main
+      - sys/Abaqus/main
+      - sys/Comsol/main
+      - sys/Postgres/main
+      - sys/Stata/main
+      - sys/SAS/main
 
-pinned_apps_group_by: "category"
-pinned_apps:
-  - sys/Jupyter/main
-  - sys/RStudioServer/main*
-  - sys/Matlab/main
-  - sys/RemoteDesktop/main
-  - sys/Abaqus/main
-  - sys/Comsol/main
-  - sys/Postgres/main
-  - sys/Stata/main
-  - sys/SAS/main
+    nav_bar:
+      - "clusters"
+      - "files"
+      - "jobs"
+      - title: "Interactive Apps"
+        apps: "*/main"
+      - "sessions"
 
-
-
-nav_bar:
-  - "clusters"
-  - "files"
-  - "jobs"
-  - title: "Interactive Apps"
-    apps: "*/main"
-  - "sessions"
-
-dashboard_layout:
-  rows:
-    - columns:
-        - width: 10
-          widgets:
-            - "pinned_apps"
-            - "motd"
-
-help_menu:
-  - group: "Interface"
-  - title: "FASRC"
-    profile: "fasrc"
-    icon: "/public/images/fasrc_logo.jpg"
-  - title: "Sid"
-    profile: "sid"
-    icon: "/public/images/sid_logo.png"
-  - title: "Navigation"
-    profile: "navigation"
-    icon: "fas://user"
+    dashboard_layout:
+      rows:
+        - columns:
+            - width: 10
+              widgets:
+                - "pinned_apps"
+                - "fasrc_motd"
