--- a/ondemand/puppet/Dockerfile.puppet
+++ b/ondemand/puppet/Dockerfile.puppet
@@ -38,7 +38,7 @@ RUN groupadd -g $OOD_GID ood || : && \
 RUN /usr/bin/htdbm -bc /etc/httpd/.htpasswd.dbm ood ood
 
 COPY ./puppet.conf /etc/puppetlabs/puppet/puppet.conf
-RUN git clone --branch ondemand-3.0 https://github.com/hmdc/puppet-module-openondemand.git /tmp/openondemand
+RUN git clone https://github.com/hmdc/puppet-module-openondemand.git /tmp/openondemand
 RUN tar -czvf /tmp/openondemand.tar.gz /tmp/openondemand
 RUN /opt/puppetlabs/bin/puppet module install /tmp/openondemand.tar.gz
 
