feat(ondemand): added initial commit to create ondemand environment for rocky8 for Slurm and OnDemand

--- a/ondemand/Makefile
+++ b/ondemand/Makefile
@@ -7,9 +7,11 @@ all:: dev
 OOD_UID := $(shell id -u)
 OOD_GID := $(shell id -g)
 OOD_TAG := 3.0.1-1.el7
-SLURM_TAG := slurm-21-08-6-1
+#SLURM_TAG := slurm-21-08-6-1
+SLURM_TAG := slurm-21-08-8-2
 SID_SLURM_IMAGE := hmdc/sid-slurm:$(SLURM_TAG)
 SID_ONDEMAND_IMAGE := hmdc/sid-ood:$(SLURM_TAG)-ood-$(OOD_TAG)
+ONDEMAND_ENV_IMAGE := ondemand_env:$(SLURM_TAG)
 
 ENV := env SLURM_TAG=$(SLURM_TAG) SID_SLURM_IMAGE=$(SID_SLURM_IMAGE) SID_ONDEMAND_IMAGE=$(SID_ONDEMAND_IMAGE) OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID)
 
@@ -23,6 +25,9 @@ NPM_RUN_VERSION_ARGS := --config='.release-it-dev.json'
 endif
 
 dev: down up
+
+env: down
+	env SLURM_TAG=$(SLURM_TAG) SID_SLURM_IMAGE=$(SID_SLURM_IMAGE) SID_ONDEMAND_IMAGE=$(ONDEMAND_ENV_IMAGE) OOD_UID=$(OOD_UID) OOD_GID=$(OOD_GID) docker-compose up --build
 
 release: next-version
 	mkdir -p ./target
@@ -51,6 +56,9 @@ docker-build-slurm:
 
 docker-build-ood:
 	docker build --build-arg OOD_TAG=$(OOD_TAG) --build-arg SLURM_TAG=$(SLURM_TAG) -t $(SID_ONDEMAND_IMAGE) -f docker/Dockerfile.ondemand .
+
+docker-build-env:
+	docker build --build-arg SLURM_TAG=$(SLURM_TAG) -t $(ONDEMAND_ENV_IMAGE) -f docker/Dockerfile.environment .
 
 docker-push-ood:
 	docker push $(SID_ONDEMAND_IMAGE)
